--- a/email_jinja_template.html
+++ b/email_jinja_template.html
@@ -4,10 +4,11 @@
 <p style="color: #5e9ca0;"><span style="color: #000000;">Ciao ho trovato {{n_homes}} nuove case!</span></p>
 <p style="color: #5e9ca0;">&nbsp;</p>
     {% for search in searches %}
-    <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Da :&nbsp;</span></strong><span style="color: #000000;">{{ search.title}}</span></p>
-    <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Descrizione breve: </span></strong><span style="color: #000000;">{{ search.description}}</span></p>
+    <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Ricerca :&nbsp;</span></strong><span style="color: #000000;">{{ search.title}}</span></p>
+    <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Descrizione : </span></strong><span style="color: #000000;">{{ search.description}}</span></p>
         {% for home in search.homes %}
-            <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Da :&nbsp;</span></strong><span style="color: #000000;">{{ home.origin_site }}</span></p>
+            <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Ricerca :&nbsp;</span></strong><span style="color: #000000;">{{ search.title}}</span></p>
+            <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Dal sito :&nbsp;</span></strong><span style="color: #000000;">{{ home.origin_site }}</span></p>
             <p style="color: #5e9ca0;"><strong><span style="color: #000000;">Descrizione breve: </span></strong><span style="color: #000000;">{{ home.description_short }}</span></p>
             <table style="height: 72px; width: 100%; border-collapse: collapse; border-style: none;" border="1">
                 <tbody>
